--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,9 @@ jobs:
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git fetch origin
-          git checkout -b gh-pages origin/gh-pages
+          git stash
+          git checkout -b gh-pages origin/gh-pages || git checkout gh-pages
+          git stash pop || echo "Nothing to stash pop"
           rm -rf *
           cp -r ../build/* .
           git add .
