--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,8 +35,9 @@ jobs:
           git stash
           git checkout -b gh-pages origin/gh-pages || git checkout gh-pages
           git stash pop || echo "Nothing to stash pop"
-          rm -rf *
-          cp -r ../build/* .
+          git reset --hard
+          git clean -fd
+          cp -r build/* .
           git add .
           git commit -m "Deploy to GitHub Pages"
           git push origin gh-pages --force
