--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,12 +32,10 @@ jobs:
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git fetch origin
-          git stash
-          git checkout -b gh-pages origin/gh-pages || git checkout gh-pages
-          git stash pop || echo "Nothing to stash pop"
-          git reset --hard
+          git checkout gh-pages || git checkout -b gh-pages
+          git reset --hard origin/gh-pages
           git clean -fd
           cp -r build/* .
           git add .
           git commit -m "Deploy to GitHub Pages"
-          git push origin gh-pages --force
+          git push --force origin gh-pages
